Finished the Spring cors function to handle JWT logout.